[gd_scene load_steps=34 format=3 uid="uid://dc7aktr1f5opg"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_gyboe"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="3_16twk"]
[ext_resource type="Texture2D" uid="uid://bv2en2yvl0kvo" path="res://assets/sprites/vignette.png" id="3_74b6m"]
[ext_resource type="Texture2D" uid="uid://crf3x1a6mm6b5" path="res://assets/sprites/player.png" id="3_oj2jm"]
[ext_resource type="Texture2D" uid="uid://clplopyknmamn" path="res://assets/sprites/trialsheet.png" id="4_gc2fj"]
[ext_resource type="Script" path="res://scripts/TimerDisplay.gd" id="4_gy5f6"]
[ext_resource type="FontFile" uid="uid://deh6c62ayb1de" path="res://assets/fonts/Kenney Mini.ttf" id="4_rq0y7"]
[ext_resource type="Script" path="res://scripts/TrailAnimation.gd" id="5_3ppbk"]
[ext_resource type="PackedScene" uid="uid://h5y2b18uksyl" path="res://scenes/game_buttons.tscn" id="5_mc4f4"]
[ext_resource type="Script" path="res://scripts/Pause.gd" id="7_hqwu2"]
[ext_resource type="PackedScene" uid="uid://cmhaktjvtnwyh" path="res://scenes/choice_overlay.tscn" id="7_wphgy"]
[ext_resource type="Texture2D" uid="uid://cp0oaawxqu400" path="res://assets/sprites/twirl_03.png" id="8_15hpb"]
[ext_resource type="Texture2D" uid="uid://b868fu7vn0f6e" path="res://assets/sprites/spark_04.png" id="9_6d0nb"]
[ext_resource type="AudioStream" uid="uid://calhdetumdsyc" path="res://assets/sounds/Lane_Switch_Left.mp3" id="12_g3o72"]
[ext_resource type="Script" path="res://scripts/SoundManager.gd" id="12_pwoux"]
[ext_resource type="AudioStream" uid="uid://wexbtml1h3pr" path="res://assets/sounds/Lane_Switch_Right.mp3" id="13_1hx18"]
[ext_resource type="AudioStream" uid="uid://boh8uuifldn7" path="res://assets/sounds/Portal_A.mp3" id="15_qq2rn"]
[ext_resource type="AudioStream" uid="uid://bbjpegiea3x8n" path="res://assets/sounds/Speed_Up.mp3" id="16_jqpko"]
[ext_resource type="AudioStream" uid="uid://ks8noe1w2nv0" path="res://assets/sounds/Portal_B.mp3" id="16_se6lp"]
[ext_resource type="AudioStream" uid="uid://s4k68vs8rrjy" path="res://assets/sounds/Speed_Down.mp3" id="17_22nu5"]
[ext_resource type="AudioStream" uid="uid://q2nlk3e4qmuy" path="res://assets/sounds/Super_Speed.mp3" id="18_um1a0"]
[ext_resource type="AudioStream" uid="uid://16dt2wvxbswh" path="res://assets/sounds/Super_Slow.mp3" id="19_t1xbk"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lk7ji"]

[sub_resource type="LabelSettings" id="LabelSettings_nmd8s"]
font = ExtResource("4_rq0y7")
font_size = 200

[sub_resource type="LabelSettings" id="LabelSettings_nx51t"]
font = ExtResource("4_rq0y7")
font_size = 120

[sub_resource type="LabelSettings" id="LabelSettings_7m8ul"]
font = ExtResource("4_rq0y7")
font_size = 200

[sub_resource type="LabelSettings" id="LabelSettings_k6vh5"]
font = ExtResource("4_rq0y7")
font_size = 48

[sub_resource type="AtlasTexture" id="AtlasTexture_c61c1"]
atlas = ExtResource("4_gc2fj")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xbex"]
atlas = ExtResource("4_gc2fj")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf35g"]
atlas = ExtResource("4_gc2fj")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq41s"]
atlas = ExtResource("4_gc2fj")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0hxy"]
atlas = ExtResource("4_gc2fj")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_me1l3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c61c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xbex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf35g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq41s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0hxy")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[node name="Player" type="PathFollow2D"]
material = SubResource("CanvasItemMaterial_lk7ji")
rotates = false
script = ExtResource("1_gyboe")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_16twk")

[node name="Vignette" type="Sprite2D" parent="Camera2D"]
texture = ExtResource("3_74b6m")

[node name="GameOver" type="Sprite2D" parent="Camera2D"]
visible = false
z_index = 99
texture = ExtResource("3_74b6m")

[node name="Label" type="Label" parent="Camera2D/GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1510.0
offset_top = -665.0
offset_right = -410.0
offset_bottom = -415.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Game Over"
label_settings = SubResource("LabelSettings_nmd8s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameButtons" parent="Camera2D/GameOver" instance=ExtResource("5_mc4f4")]

[node name="TimerDisplay" type="Control" parent="Camera2D"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_gy5f6")

[node name="Time" type="Label" parent="Camera2D/TimerDisplay"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -75.0
offset_right = 127.5
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Time"
label_settings = SubResource("LabelSettings_nx51t")

[node name="EnemyTime" type="Label" parent="Camera2D/TimerDisplay"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -75.0
offset_right = 127.5
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Time"
label_settings = SubResource("LabelSettings_nx51t")

[node name="GameButtons" parent="Camera2D/TimerDisplay" instance=ExtResource("5_mc4f4")]

[node name="Pause" type="Sprite2D" parent="Camera2D"]
process_mode = 3
visible = false
z_index = 100
script = ExtResource("7_hqwu2")

[node name="ColorRect" type="ColorRect" parent="Camera2D/Pause"]
modulate = Color(1, 1, 1, 0.117647)
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="Label" type="Label" parent="Camera2D/Pause"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Paused"
label_settings = SubResource("LabelSettings_7m8ul")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="Camera2D/Pause"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -330.0
offset_top = 119.5
offset_right = 330.0
offset_bottom = 179.5
grow_horizontal = 2
grow_vertical = 2
text = "Press ESC again to resume"
label_settings = SubResource("LabelSettings_k6vh5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprites" type="Node2D" parent="."]

[node name="Triangle" type="Sprite2D" parent="Sprites"]
z_index = 5
texture_filter = 1
texture_repeat = 1
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_oj2jm")

[node name="Trail" type="AnimatedSprite2D" parent="Sprites"]
z_index = 3
position = Vector2(2.08165e-12, 69.34)
scale = Vector2(0.565, 0.401)
sprite_frames = SubResource("SpriteFrames_me1l3")
frame_progress = 0.357305
script = ExtResource("5_3ppbk")

[node name="Trail2" type="AnimatedSprite2D" parent="Sprites"]
z_index = 3
position = Vector2(2.08165e-12, 69.34)
scale = Vector2(0.565, 0.401)
sprite_frames = SubResource("SpriteFrames_me1l3")
frame_progress = 0.357305
script = ExtResource("5_3ppbk")

[node name="ParticleSysMoveLeft" type="Node2D" parent="Sprites"]
visible = false

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sprites/ParticleSysMoveLeft"]
amount = 1
lifetime = 1.5
speed_scale = 2.0
texture = ExtResource("8_15hpb")
emission_shape = 1
emission_sphere_radius = 0.01
gravity = Vector2(0, 0)
angular_velocity_min = 150.0
angular_velocity_max = 150.0
scale_amount_min = 0.45
scale_amount_max = 0.45
color = Color(0.519225, 0.764319, 0.7809, 1)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Sprites/ParticleSysMoveLeft"]
amount = 16
lifetime = 10.0
explosiveness = 0.12
texture = ExtResource("9_6d0nb")
gravity = Vector2(260.18, 0)
initial_velocity_max = 36.9
angular_velocity_max = 169.2
scale_amount_min = 0.35
scale_amount_max = 0.35
color = Color(0.693722, 0.855936, 0.902581, 1)

[node name="ParticleSysMoveRight" type="Node2D" parent="Sprites"]
visible = false

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sprites/ParticleSysMoveRight"]
amount = 1
lifetime = 39.0
speed_scale = 2.0
texture = ExtResource("8_15hpb")
emission_shape = 1
emission_sphere_radius = 0.01
gravity = Vector2(0, 0)
angular_velocity_min = -150.0
angular_velocity_max = -150.0
scale_amount_min = 0.45
scale_amount_max = 0.45
color = Color(0.519225, 0.764319, 0.7809, 1)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Sprites/ParticleSysMoveRight"]
amount = 16
lifetime = 10.0
explosiveness = 0.12
texture = ExtResource("9_6d0nb")
gravity = Vector2(-260.18, 0)
initial_velocity_max = 36.9
angular_velocity_max = 169.2
scale_amount_min = 0.35
scale_amount_max = 0.35
color = Color(0.693722, 0.855936, 0.902581, 1)

[node name="Sounds" type="Node2D" parent="."]
script = ExtResource("12_pwoux")

[node name="LaneSwitchLeft" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12_g3o72")
volume_db = -15.0

[node name="LaneSwitchRight" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("13_1hx18")
volume_db = -15.0

[node name="Win" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15_qq2rn")
volume_db = -15.0

[node name="Lose" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("16_se6lp")
volume_db = -15.0

[node name="Speed" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("16_jqpko")
volume_db = -15.0

[node name="Slow" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("17_22nu5")
volume_db = -15.0

[node name="ExtraSpeed" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("18_um1a0")
volume_db = -15.0

[node name="ExtraSlow" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("19_t1xbk")
volume_db = -15.0

[node name="ChoiceOverlay" parent="." instance=ExtResource("7_wphgy")]

[connection signal="choice_btn_pressed" from="." to="ChoiceOverlay" method="_on_choice_btn_pressed"]
[connection signal="dead_end_reached" from="." to="Camera2D/Pause" method="_on_player_dead_end_reached"]
[connection signal="end_reached" from="." to="." method="_on_end_reached"]
[connection signal="end_reached" from="." to="Camera2D/TimerDisplay" method="_on_player_end_reached"]
[connection signal="end_reached" from="." to="Camera2D/Pause" method="_on_player_end_reached"]
[connection signal="enemy_end_reached" from="." to="Camera2D/TimerDisplay" method="_on_enemy_end_reached"]
