extends Node2D

@onready var lane_switch_left = $LaneSwitchLeft
@onready var lane_switch_right = $LaneSwitchRight
@onready var win = $Win
@onready var lose = $Lose
@onready var speed = $Speed
@onready var slow = $Slow
@onready var extra_speed = $ExtraSpeed
@onready var extra_slow = $ExtraSlow

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.
